--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -215,7 +215,7 @@ Ostasien.2.t:0 "검은 월요일!"
 Ostasien.2.d:0 "독일의 상황은 끔찍합니다. 파괴적인 금융 위기 후에 독일 경제는 누더기가 되었고 식민지들도 틀림없이 그 길을 따라갈 것입니다. 우리는 지출의 상당 부분을 줄여야만 하며, 동아시아의 이미 약화되고 있는 경제를 지탱할 방법을 즉시 찾아야 합니다. 이 위기를 이겨내는 데는 많은 시간이 걸릴 것입니다..."
 Ostasien.2.a:0 "처참하구만!"
 
-Ostasien.3.t:0 "검은 주간의 끝"
+Ostasien.3.t:0 "검은 일주일의 끝"
 Ostasien.3.d:0 "최초의 베를린 주식 시장 붕괴 이후 일주일이 지났습니다. 우리의 주요 수출품인 고무와 주석은 이미 자동차 산업의 타이어 수요의 붕괴로 인해 검은 월요일 이전 가격의 절반 이상으로 떨어졌습니다. 동시에 유럽 시장으로의 쌀 수출 역시 부두 바닥에 수만 톤의 쌀을 가라앉게 하면서 나락으로 떨어졌습니다. 저축이 거의 없고 가지고 있는 부동산도 거의 없는 싱가포르, 사이공 등의 도시에 사는 유럽인들은 도박으로 모든 재산을 탕진했고, 지금은 현지인 이웃들보다 나을 것이 없는 상황입니다."
 Ostasien.3.a:0 "어떻게든 해야만 한다!"
 
@@ -323,20 +323,20 @@ Ostasien.25.a:0 "우리는 그의 도움이 필요하다."
 #Ostasien.16.c: "바오 다이는 안남을 평화와 질서로 이끌 것이다. (VIE를 해방시키고 플레이합니다)"
 
 Ostasien.30.t:0 "하락하는 물가"
-Ostasien.30.d:0 "The prices of rice and rubber are rapidly falling across the colonies. The farmers and plantation owners, relying on rice and rubber exports, have been hit hard, especially in our two major colonies of Indcohina and Malaya. It's possible to control the price in one colony, but our resources are limited, and this will almost certainly come at the cost of the other?"
-Ostasien.30.a:0 "This is not our business"
-Ostasien.30.b:0 "Protect Indochina"
-Ostasien.30.c:0 "Protect Malaya"
+Ostasien.30.d:0 "곡물과 고무의 가격이 식민지 전역에서 빠르게 떨어지고 있습니다. 곡물과 고무 수출에 의존하던 농부들과 플랜테이션 소유주들은 특히 두 주요 식민지인 인도차이나와 말라야에서 큰 타격을 입었습니다. 한 식민지에서 가격을 조절하는 것은 가능하지만, 우리의 자원은 한계가 있으며 다른 식민지는 희생을 치를 것입니다."
+Ostasien.30.a:0 "이는 우리 일이 아니다"
+Ostasien.30.b:0 "인도차이나를 보호하라"
+Ostasien.30.c:0 "말라야를 보호하라"
 
 Ostasien.32.t:0 "재배지 파업"
 Ostasien.32.d:0 "The price of rubber keeps falling. Many plantation owners have decided to fire workers and keep the rest working full time. These decisions have triggered large-scale strikes in plantations in Indochina and Malaya. Workers are demanding employers stop firing employees, and they call for shorter working hours with better conditions. Since most plantation workers are illiterate, it's suspected that socialist agitators are behind their coordination."
-Ostasien.32.a:0 "Suppress the strikes"
-Ostasien.32.b:0 "Try to negotiate with them"
+Ostasien.32.a:0 "파업을 진압해라"
+Ostasien.32.b:0 "협상을 시도하라"
 
 Ostasien.31.t:0 "유럽인 특권"
 Ostasien.31.d:0 "With the shock of Black Monday, many European settlers have lost everything and become impoverished overnight. Now some have petitioned us to strengthen their social and commercial privileges so that, as settlers, they will not be reduced to living like mere colonial subjects. They argue that a strict racial caste system is the only way to ensure the peace in our colonies."
 Ostasien.31.a:0 "Reject Them"
-Ostasien.31.b:0 "Reinforce European Privilege"
+Ostasien.31.b:0 "유럽인 특권을 강화하라"
 
 Ostasien.33.t:0 "빈 딘 코뮌 운동이 진정되다"
 Ostasien.33.d:0 "The peasant rebellion in Binh Dinh province has been pacified by our soldiers. Bombers and naval gunfire have proven especially effective in intimidating Vietnamese farmers. Binh Dinh, in Vietnamese, means pacification, and now it has really lived up to its name."
@@ -344,7 +344,7 @@ Ostasien.33.a:0 "Excellent!"
 
 Ostasien.34.t:0 "사이공에서의 침략이 소멸되다"
 Ostasien.34.d:0 "The sound of rain falling on the deserted square is deafening. A tattered pamphlet, thrown in the gutter -- the ink running out across the paper in soft blueish blooms -- is the only thing that still serves as proof that Saigon was, up until just recently, a hotbed of radical socialist and syndicalist agitation. Depicted on the pamphlet is a Vietnamese worker holding a socialist red flag. The pamphlet reads: 'Workers of Indochina, unite!'. It is soon swept away by the rain and down into the sewers whence it came."
-Ostasien.34.a:0 "Good News"
+Ostasien.34.a:0 "좋은 소식이군"
 
 Ostasien.35.t:0 "전쟁의 규칙"
 Ostasien.35.d:0 "Vietcong doesn't respect the modern rule of war. Their guerrilla fighters not only refuse to wear uniforms, they often do their best to blend in with the civilian population. It's almost impossible to tell a Vietcong insurgent from civilian population. Our generals argue that the war against Vietcong can only be total."
@@ -353,8 +353,8 @@ Ostasien.35.a:0 "Shot everything that moves!"
 
 Ostasien.40.t:0 "미틀아프리카의 군사 대표단"
 Ostasien.40.d:0 "Mittelafrika is our sister project of sorts, we both defend the Kaiserreich from its outside enemies and insubordinate subjects so it is only reasonable for us to strengthen our ties. The Grand Admiral has decided to send a military delegation to Mittelafrika, but what do we have to offer our Mittelafrikan friend?"
-Ostasien.40.a:0 "New military technology!"
-Ostasien.40.b:0 "Counterinsurgency and Colonial Administration!"
+Ostasien.40.a:0 "새로운 군사 기술!"
+Ostasien.40.b:0 "반란 방지와 식민 행정!"
 
 Ostasien.41.t:0 "독일령 동아시아의 군사 대표단"
 Ostasien.41.d.a:0 "Ostasien is our sister project of sorts, we both defend the Kaiserreich from its outside enemies and insubordinate subjects. Now Admiral von Mücke has sent a delegation from Singapur to us. They have generously shared the latest naval technology and tactics with us."
@@ -363,13 +363,13 @@ Ostasien.41.a:0 "Courtesy demands reciprocity."
 
 Ostasien.42.t:0 "미틀아프리카에서의 학습"
 Ostasien.42.d:0 "Our military delegation has returned from Mittelafrika. Despite some flaws in local administration observed, our delegation reported that they were warmly hosted in Mittelafrika and learned a lot from them."
-Ostasien.42.a:0 "Excellent!"
+Ostasien.42.a:0 "완벽하군!"
 
 Ostasien.51.t:0 "새로운 해군 대장"
 Ostasien.51.d.a:0 "After reassessing the status of the admiralty, we have decided that German East Asia must be changed into a fully functional colony. We will focus on building an administration to establish direct rule from Singapore!"
 Ostasien.51.d.b:0 "After reassessing the status of the admiralty, we have decided that German East Asia is, above all, a branch of the Kaiserliche Marine. We will focus on naval construction and leave the administration to the natives."
-Ostasien.51.a:0 "Great!"
-Ostasien.51.b:0 "Great!"
+Ostasien.51.a:0 "훌륭하군!"
+Ostasien.51.b:0 "훌륭하군!"
 
 Ostasien.52.t:0 "새로운 선박 도착"
 Ostasien.52.d:0 "1934년 해군 계획에 의해 건조된 새 함선이 영광스러운 우리 동아시아 싱가포르 함대에 합류했습니다."
@@ -379,18 +379,18 @@ Ostasien.52.a:0 "멋지군!"
 
 Ostasien.60.t:0 "필리핀 사회주의 반란"
 Ostasien.60.d:0 "With the end of American colonial rule in the Philippines, the archipelago fell into chaos. A group of disgruntled army officers along with bands of peasants and industrial workers have revolted to overthrow the government and establish a socialist regime. It remains to be seen if the Philippine military forces can suppress the rebels, but some help will certainly increase their chance of winning."
-Ostasien.60.a:0 "Secretly support the Philippine army"
-Ostasien.60.b:0 "Not our business"
+Ostasien.60.a:0 "필리핀 군대를 은밀히 지원하라"
+Ostasien.60.b:0 "우리 일이 아니다"
 
 Ostasien.61.t:0 "사회주의자들의 필리핀 권력 장악"
 Ostasien.61.d:0 "The Philippine government had signed power over to the Syndicalist movement. However, the southern parts of Philippines, including Palawan and Mindanao islands, are not under firm control of the new central government. Could this be our chance to free them from syndicalist tyranny and bring them under the imperial protection?"
-Ostasien.61.a:0 "Send a fleet to secure the southern islands"
+Ostasien.61.a:0 "함대를 보내 남쪽 섬들을 지켜라"
 Ostasien.61.b:0 "Leave them be"
 
 Ostasien.62.t:0 "팔라완의 독일 함대!"
 Ostasien.62.d:0 "Germany has placed the population of the southern regions under their "protection" and sent a fleet to secure the area. How should we react?"
-Ostasien.62.a:0 "We will die heorically"
-Ostasien.62.b:0 "We can't do anything"
+Ostasien.62.a:0 "우리는 영웅적으로 죽을 것이다"
+Ostasien.62.b:0 "아무것도 할 수 없다"
 
 Ostasien.63.t:0 "필리핀 정부의 주름"
 Ostasien.63.d:0 "The Philippine government has refused to confront us. Now the southern islands of the Philippines can be added to the Ostasien colonies, a glorious day for the Kaiserreich."
@@ -433,16 +433,16 @@ GEA_indochina_war_decisions:0 "인도차이나 전쟁"
 GEA_indochina_war_decisions_desc:0 "The Indochinese insurgency has deteriorated into a full-blown war. However, the war against Vietcong insurgents has no concrete front. Everywhere is a frontline and every peasant wearing a rice hat could be a Vietcong. We must do whatever we can to secure the victory of Kaiserreich. \n\nEstimated §YInsurgency Strength§! in Indochina: §R[?INC.guerilla_activity|-0]§!\n"
 reduce_10_guerilla_tooltip:0 "We estimate this will reduce §YInsurgency Strength§! by §R10§!.\n"
 GEA_suppress_Tonkin:0 "통킹의 베트콩 진압"
-GEA_maintain_Tonkin_control:0 "Maintain our control in Tonkin"
-GEA_reinforce_police:0 "Reinforce Police Units"
-GEA_Zeppelin_decision:0 "Deploy Zeppelin Airships"
+GEA_maintain_Tonkin_control:0 "통킹 지배를 유지"
+GEA_reinforce_police:0 "경찰 부대 강화"
+GEA_Zeppelin_decision:0 "체펠린 비행선 투입"
 GEA_Zeppelin_decision_desc:0 "With the development of naval aviation, the Zepplin airships have been gradually replaced by more advanced maritime patrol planes in Ostasien arsenal. naval reconnaissance task. However, the recent war in Indochina has given birth to a daring idea: Using Zeppelin to patrol over the Indochinese peninsula. These airships could also deliver supplies to isolated garrisons. With the poor anti-air firepower of the rebels, this should be a safe bet."
-GEA_Fernspaher_decision:0 "Form Fernspaher Units"
+GEA_Fernspaher_decision:0 "특수 정찰 부대 설립"
 GEA_Fernspaher_decision_desc:0 "The growingly intense war in Indochina has exposed the weakness of our army. While our infantry units are well equipped to defend their position against enemy, they are too cumbersome to fight aggressively and flexibly. It's advised that we can select elite soldiers from our armed forces, combining the special skills of Gebirgsjäger and Fallschirmjäger to form our own elite Fernspäher unit to better conduct this kind of missions."
 GEA_reintegrate_Cochinchina_decision:0 "코친차이나 재합병"
-GEA_German_vietnamese_reconciliation_decision:0 "German-Vietnamese Reconciliation"
+GEA_German_vietnamese_reconciliation_decision:0 "독일-베트남 화해"
 GEA_German_vietnamese_reconciliation_decision_desc:0 "The flashback of the counter-insurgency actions in Indochina is haunting Admiral Hellmuth von Mücke and now he felt that he has do something to reconcile the brutal killings. He wants to pursue a popular colonial policy by granting greater local autonomy and promoting German-Vietnamese harmony. By doing so, he hopes to regain the hearts and minds of people in Cochinchina."
-blow_singapore_causeway:0 "Destruction of Dschohor-Singapur Causeway"
+blow_singapore_causeway:0 "조호르-싱가포르 방죽길 파괴"
 blow_singapore_causeway_desc:0 "Being the only land route between the mainland and Singapur, while destroying this can give us the precious time needed to fortify the island, doing so will have negative consequence on our war effort - as this mean that we've decided to abandon the mainland to the enemy hands..."
 #Fleet Exercise
 #With the arrival of new capital ships, our fleet has experimented and exercised new group tactics. Maybe it's time to have a joint exercise with the High Sea Fleet?
@@ -510,31 +510,31 @@ GEA_austerity_budget:0 "예산 긴축"
 GEA_austerity_budget_desc:0 "While measures have been taken to reduce the effects of Black Monday, The admiralty is still constrained by a lack of funds."
 GEA_austerity_budget2:0 "예산 긴축"
 GEA_austerity_budget2_desc:0 "While measures have been taken to reduce the effects of Black Monday, The admiralty is still constrained by a lack of funds."
-GEA_harassed_by_vc_idea:0 "Vietcong Harassment"
+GEA_harassed_by_vc_idea:0 "베트콩의 요란"
 GEA_flush_budget:0 "Healthy Budget"
 GEA_flush_budget_desc:0 "Our Budgetary situation has improved to beyond the pre-crisis level."
-GEA_colonial_disaster_idea:0 "Colonial Tumult"
-GEA_colonial_disaster_idea_desc:0 "As the aftermath of Black Monday turns out to be disastrous, insurgency spreads in all of our colonies."
-GEA_colonial_instability_idea:0 "Colonial Instability"
-GEA_colonial_instability_idea_desc:0 "Efforts have been made to control the situation, but the colonies are still unstable."
-GEA_Infrastructural_Effort_Idea:0 "Ostasien Economic Sphere"
-GEA_Infrastructural_Effort_Idea_desc:0 "With the improvement of infrastructure, the bonds between our colonies have never been stronger."
-GEA_Colonial_Nation:0 "Colonial Government"
+GEA_colonial_disaster_idea:0 "식민지 혼란"
+GEA_colonial_disaster_idea_desc:0 "검은 월요일의 여파가 치명적인 것으로 밝혀지면서, 식민지 전역에서 폭동이 일어나고 있습니다."
+GEA_colonial_instability_idea:0 "식민지 불안정"
+GEA_colonial_instability_idea_desc:0 "이 상황을 잠재우기 위해 노력했지만, 여전히 식민지는 불안정합니다."
+GEA_Infrastructural_Effort_Idea:0 "동아시아 경제권"
+GEA_Infrastructural_Effort_Idea_desc:0 "기반시설의 향상으로 식민지 간 유대는 전례없이 강해질 것입니다."
+GEA_Colonial_Nation:0 "식민 정부"
 GEA_Colonial_Nation_desc:0 "Created during the rapid expansion of the 1920s, German East Asia is essentially a branch of Kaiserliche Marine tied with several territories. The admiralty in Singapur exists not as a government, or even formally as an authority, but instead as a jurisdiction; a stretch of territory in which the relatively impartial admiralty must at once balance local interests, contend with varying colonial systems, and ensure the protection of it all."
-GEA_Local_Guard_Idea:0 "Local Guards"
+GEA_Local_Guard_Idea:0 "지역 경비대"
 GEA_Local_Guard_Idea_desc:0 "We have authorise the local monarchs to recruit their own royal guard."
-GEA_Local_Guard_with_advisors_Idea:0 "Local Guards"
+GEA_Local_Guard_with_advisors_Idea:0 "지역 경비대"
 GEA_Local_Guard_with_advisors_Idea_desc:0 "We have authorised the local monarchs to recruit their own royal guard."
 GEA_help_small_business_idea:0 "Help Small Business"
-GEA_pure_admirality_idea:0 "A Fleet Backed by Colonies"
-GEA_colonization_idea:0 "Ostasien Colonisation"
-GEA_New_Shipbuilding_Methods_idea:0 "New Shipbuilding Methods"
-GEA_Anti_Invasion_Plan_idea:0 "Anti-Invasion Plan"
-GEA_Absolute_Defense_Sphere_idea:0 "Absolute Defence Sphere"
-GEA_plantations_negotiation_idea:0 "Negotiate with Plantation Workers"
+GEA_pure_admirality_idea:0 "식민지의 지원을 받는 함대"
+GEA_colonization_idea:0 "동아시아 식민화"
+GEA_New_Shipbuilding_Methods_idea:0 "새로운 조선 공법"
+GEA_Anti_Invasion_Plan_idea:0 "침략 방지 계획"
+GEA_Absolute_Defense_Sphere_idea:0 "절대방어권"
+GEA_plantations_negotiation_idea:0 "플랜테이션 노동자와 협상"
 GEA_falling_price_idea:0 "Falling Price"
 GEA_conrol_price_idea:0 "Price Control Efforts"
-GEA_pacific_rule_idea:0 "Rule the Pacific"
+GEA_pacific_rule_idea:0 "태평양 지배"
 GEA_vietcong_killer_idea:0 "베트콩 킬러"
 GEA_vietcong_killer_idea_desc:0 "도망치는 자는 베트콩이다! 자리를 지키는 자는 잘 훈련된 베트콩이다!"
 #jungle_warfare:0 "Jungle Combat Training" Redundant with Siamese fiels
