--- a/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
@@ -1,7 +1,7 @@
 l_english:
 
 ### Ideas ###
-LIT_black_monday:0 "Black Monday"
+LIT_black_monday:0 "검은 월요일"
 LIT_black_monday_desc:0 "The collapse of the Berlin stock market is still affecting our economy badly."
 LIT_welfare_state:0 "Building a Welfare State"
 LIT_welfare_state_desc:0 "We have chosen the path proposed by the Social Democratic Party - the third way. A way of creating a state for every man without the need of a revolution, that is."
@@ -10,7 +10,7 @@ LIT_militarized_society_desc:0 "The Lithuanian Riflemen Union is now a major par
 LIT_forest_brothers:0 "The Forest Brothers"
 LIT_forest_brothers_desc:0 "Lithuania might not survive another war, and thus we must prepare our nation to take a stand and fight on throughout the land even if our troops break."
 LIT_anbo_superiority:0 "ANBO Superiority"
-LIT_anbo_superiority_desc:0 "Meaning 'Antanas Wants to Be in the Air', ANBO is the brainchild of the aviation constructor Antanas Gustaitis, who designed such stellar aircraft like ANBO-IV and ANBO-VIII. The ideas of a cheap, light and fast aicraft that Gustaitis started still resonate within our aircraft designers."
+LIT_anbo_superiority_desc:0 "Meaning 'Antanas Wants to Be in the Air', ANBO is the brainchild of the aviation constructor Antanas Gustaitis, who designed such stellar aircraft like ANBO-IV and ANBO-VIII. The ideas of a cheap, light and fast aircraft that Gustaitis started still resonate within our aircraft designers."
 LIT_baltic_model_idea:0 "The Baltic Model"
 LIT_baltic_model_idea_desc:0 "Extensive welfare programs, support for the worker and business regulation have turned our country into an example, much like Scandinavia, for all social democrats to follow. There is no need for a revolution to achieve social equality..."
 LIT_christian_society:0 "A Christian Society"
@@ -155,7 +155,7 @@ LIT_limited_nationalism_desc:0 "What's wrong with a few edits to the country's C
 LIT_historical_revisionism:0 "Historical Revisionism"
 LIT_historical_revisionism_desc:0 "Belorussians? In OUR Grand Duchy of Lithuania? Don't make me laugh! It was always Lithuanian! Always great! Always powerful! Until those pesky Poles and Russians ruined it, that's all! We'll make the people believe."
 LIT_anti_slavic_laws:0 "Anti-Slavic Laws"
-LIT_anti_slavic_laws_desc:0 "The Byelorussian and Polish minorities in the Vilnius region have been a thorn in our goals, but we hold the power of law making. By forcing all Slavs to Lithuanise their names, abolishing non-Lithuanian schools and discriminating the minorities in local governments, we can assimilate them much more easily."
+LIT_anti_slavic_laws_desc:0 "The Belorussian and Polish minorities in the Vilnius region have been a thorn in our goals, but we hold the power of law making. By forcing all Slavs to Lithuanise their names, abolishing non-Lithuanian schools and discriminating the minorities in local governments, we can assimilate them much more easily."
 LIT_september_8:0 "Declare September 8 as National Day"
 LIT_september_8_desc:0 "September 8, the day when Vytautas the Great was supposed to be coronated King, if not for his untimely death. He was the saviour of Lithuania from Polish dominance, and in these days of German rule, we must look at his persona as an icon of our struggle."
 LIT_republic:0 "Revolt - Declare the Republic!"
@@ -189,12 +189,6 @@ LIT_baltic_focus:0 "Baltic Focus"
 LIT_belarus_focus:0 "Belorussia Focus"
 LIT_WARNING:0 "§RShould UBD and Germany accept, you will be annexed!§!"
 LIT_under_german_heel:0 "Under the heel of the Germans."
-
-### Leader descriptions ###
-POLITICS_SKIRPA_DESC:0 "Kazys Škirpa's life is quite colourful to an outsider. He was one of the first volunteers in the Lithuanian army in 1918, and soon worked his way to Major General, but he was quick to realise that there will be no free and independent Lithuania under the German thumb. Škirpa and a number of minor disgruntled officers formed the Iron Wolf Organisation, a National Populist paramilitary fighting against German rule and the Slavic minorities within the Kingdom, as well as the Party of Lithuanian Interests as the movement's political arm. And now, he is in charge, under the Lithuanian equivalent title of the Romanian Conducator or Russian Vozhd - Tautos Vadas."
-POLITICS_MINDAUGAS_III_DESC:0 "Born as Karl Gero von Urach, the son of Wilhelm Karl, Duke of Urach, Mindaugas III ascended to the throne of Lithuania after his father's death in 1929, and has ruled this Baltic nation since. Even though he bears the name of the first king of Lithuania, it's unifier and folk hero, Mindaugas III is not concerned with the people he reigns over at all - they are foreigners to him. And Karl Gero is as much of a foreigner to them. It's hard to say if Mindaugas III would survive even a day on the throne without the Kaiser backing him from the shadows."
-POLITICS_KAZIMIERAS_II_DESC:0 "A Polish-Lithuanian aristocrat from Kretinga, Kazimieras Viktoras Tiškevičius, now Kazimieras II, has committed the greatest sin possible in the eyes of the common Lithuanian - selling out to the Russians and giving up his nation's sovereignity to return the country under the hated eastern tyrant. This event has tainted his image to his people forever, and even though Tiškevičius is a capable administrator, a bright mind and even feels some compassion for the people he rules, his rule over Lithuania is tenuous at best."
-POLITICS_VOLDEMARAS_DESC:0 "Augustinas Voldemaras began his political career in the Russian Empire. A committed nationalist, he advocated the national self-determination of Lithuania in Saint Petersburg; with the establishment of the German led Lithuanian puppet government following the treaty of Brest-Litovsk, Voldemaras returned to his homeland to again fight for its independence. As head of state, Voldemaras is likely to pursue an ultra-nationalist agenda which promotes the superiority of the Lithuanian people and devotion to the state."
 
 ### Events ###
 lithuania.1.t:0 "The Kingdom of Lithuania in 1936"
