--- a/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Leaders_l_english.yml
@@ -324,7 +324,7 @@ POLITICS_LAZARO_CARDENAS_DESC:0 "Lazaro Cardenas of the moderate Partido Revoluc
 POLITICS_DONA_ITURBIDE_DESC:0 "Doña María Josephia Sophia de Habsburgo-Itúrbide has been crowned Empress of the new Mexican Monarchy. She traces descent from both Mexico's final indigenous Emperor and the adopted son of Maximillian. As an Austrian, her ascension to the throne has fostered closer ties between Austria and Mexico."
 POLITICS_DON_FERNANDO:0 "Don Fernando de Tultengo has been crowned King of Mexico. His legitimacy is based upon descent from the final Aztec Tlatoani, Moctezuma, and thus he lacks the dynastic links which could entangle the fate of Mexico with that of another."
 
-POLITICS_GOERING_DESC:0 "Von Göring came to prominence as one of Germany's more successful fighter pilots of the Weltkrieg, scoring more than twenty victories by the end of the war, which earned him numerous decorations.\n\nHis ambitions soon turned political with his becoming chair of the Alldeutsche Verband which he led to an 8% Electoral turnout in 1928. Following this, he was appointed to Mittelafrika by Wilhelm II himself who saw von Göring as a rising capable man. Von Göring sees this as a springboard and his ticket to claiming the chancellery after a successful term in the colonies."
+POLITICS_GOERING_DESC:0 "폰 괴링은 독일에서 대전기의 가장 성공적인 전투기 파일럿으로써, 종전시까지 20회가 넘는 승리를 통해 수많은 훈장을 얻음으로 명성을 얻었습니다. \n\n그의 야망은 곧 정치적으로 변화하였으며 곧 1928년 선거에서 8%의 득표율을 보인 Alldeutsche Verband의 수장이 되었습니다. 이로써,그는 빌헬름 2세의 눈에 괴링 자신이 떠오르는 능력있는 신예로 보이게 하였으며 자신을 중앙아프리카의 관리자로 임명되도록 하였습니다. 폰 괴링은 이를 자신의 도약대로 보았으며, 식민지에서의 임기를 성공적으로 마친 뒤에 수상 자리의 공천권을 요구하는 기회로 여기고 있습니다."
 
 ##Argentina##
 
