--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -16,16 +16,6 @@ NFA_authoritarian_democrat_party_long:0 "독립주의자"
 NFA_paternal_autocrat_party_long:0 "악시옹 프랑세즈"
 NFA_national_populist_party_long:0 "청년 애국자단"
 
-### Leader Descriptions ###
-POLITICS_PHILIPPE_PETAIN_DESC:0 "베르됭의 사자는 북아프리카에서 지중해 건너 편의 사악한 생디칼리스트 쥐새끼들에게 거칠게 포효하는 것으로만 보이지만, 그는 조국 프랑스와 그가 가진 모든 것들이 무너지는 광경을 바라보며 가슴이 찢어질 듯한 슬픔에 울부짖었습니다. 그는 자신의 군대가 반란을 일으킬 것이라고는 꿈에도 몰랐고, 에펠 탑에 붉은 깃발이 게양되는 것도 전혀 예상치 못했으며, 자신이 낡은 증기선을 타고 프랑스에서 알제로 탈출하리라는 것도 예상치 못했습니다. 국민 프랑스는 옛 프랑스 공화국의 영광의 그림자에도 미치지 못하지만, 페텡 원수와 그의 조국에 사는 모든 이들의 가슴 속에는 여전히 무언가가 요동치고 있었고, 그것은 그들의 가라앉을 줄 모르는 복수심이었습니다. 베르됭의 사자는 자신의 몸이 북아프리카의 모래가 아닌 프랑스의 땅, 베르됭에 묻히는 것 외에는 바라는 것이 없습니다. 베르됭의 사자는 다시 뛰어들 것입니다. 이번에는 붉은 반역자들을 끝장내기 위해서!"
-POLITICS_JEAN_III_DESC:0 "Jean III de Orléans, once the picture of aristocratic aloofness, was severely affected by the syndicalist revolution in France. As he fled to North Africa, he became convinced of the necessity of the monarchy in securing the future of the embattled France and its people. Working closely with Action Française, Jean presented himself as the champion of the people in the fight against syndicalism. With the restoration of the Orléans monarchy, Jean aims to destroy the Communards, and extend the monarchy's principled governance to all France."
-POLITICS_NAPOLEON_IV_DESC:0 "Louis Napoleon IV de Bonaparte is the symbol of a France renewed. Coronated in the Notre Dame d'Afrique with the same grandiosity as the first Napoleon in Paris, he represents the ambition of the restoration of France's old glory. Like his ancestor at Austerlitz, Louis Napoleon endeavors to strike a deadly blow to the heart of France's enemies."
-POLITICS_PIERRE_FLANDIN_DESC:0 "Pierre Etienne Flandin reminisces of the France that was before the turmoil of the Weltkrieg and revolution. A devotee of laissez faire economics and quite socially conservative, but also firmly republican, Flandin's vision of France's future is equally a vision of the past he so cherishes."
-POLITICS_ANDRE_MALLARME_DESC:0 "André Mallarmé is often smeared by his political opponents as foolishly idealistic. Mallarmé embraces such criticisms; indeed, he is an idealist, but to be an idealist, Mallarmé argues, is to subscribe to the most worthy of notions: liberty, equality, and fraternity, the rallying cry of France's first republicans. Mallarmé believes that though syndicalism is an affront to human dignity, the concerns of France's people must be not only tolerated, but considered. A liberal republic, to Mallarmé, is the only effective defence against syndicalism."
-POLITICS_FERNAND_BOUISSON_DESC:0 "Fernand Bouisson, a deputy from the 'Bouches du Rhone' before the Weltkrieg and a Pied-Noir, was well suited for the political atmosphere of the exiled French Republic. Bouisson, a leftist with a disdain for syndicalism did not hesitate to publicly disavow that ideology in an address before the chamber of deputies. Bouisson is guided compassion for his fellow man, and the belief that all French should have their needs met."
-POLITICS_CHARLES_DEGAULLE_DESC:0 "Charles de Gaulle, who once fought furiously against both the Germans and Communards, now, as president, battles for the fate of the French Republic. A protégé of Philippe Petain, de Gaulle advocates a strong executive as the only institution capable of guiding the wayward Republic back to prominence. As a leader of men, both in the field of battle and in the halls of the legislature, de Gaulle has proven capable."
-POLITICS_HENRI_VI_DESC:0 "Henri VI de Orléans, though but a boy when France was swept up in the fires of revolution, still bears a scar on his forearm where a stray piece of shrapnel embedded itself all those years ago. The trials Henri experienced in his youth steeled his resolve to dedicate himself to France; though paternalistic, Henri is deeply personally invested in his people's wellbeing. As king, Henri seeks to be both France's sword and its shield in the struggle for its future."
-
 ### Ideas ###
 NFA_anti_communard:0 "반 코뮌"
 NFA_anti_communard_desc:0 "1919년 세계대전에서 우리가 패배한 이후, 코뮌은 다시 봉기해 우리의 자랑스러운 공화국을 파괴했습니다. 다행히도, 공화국의 가장 중요한 인물들 중 몇몇은 반-혁명 계획을 세우고 있는 알제리로 피신했습니다. 생디칼리즘 반역자들이 본토를 완전히 장악했으니, 우리는 그들을 분쇄해야 합니다! 우리는 조국 영원한 프랑스의 영원한 자유를 보장할 것입니다!"
@@ -42,11 +32,11 @@ NFA_conservative_monarchy:0 "반역적인 군주제"
 NFA_darlan_plan:0 "다를랑 계획"
 NFA_fortification_darlan:0 "요새 표준화"
 NFA_navy_expansion_idea:0 "해군 증강"
-NFA_degaulle_plan:0 "The De Gaulle Plan"
-NFA_southern_conscript_regular:0 "Southern Conscription : a Regular Force"
-NFA_southern_conscript_colonial:0 "Southern Conscription : a Separate Force"
-NFA_native_conscription1:0 "Native Conscription"
-NFA_native_conscription2:0 "Native Conscription"
+NFA_degaulle_plan:0 "드골 계획"
+NFA_southern_conscript_regular:0 "남부 징병 : 정규군"
+NFA_southern_conscript_colonial:0 "남부 징병 : 분리된 군대"
+NFA_native_conscription1:0 "원주민 징병"
+NFA_native_conscription2:0 "원주민 징병"
 moncef_reduces_conscription_idea:0 "Moncef Bey opposes conscription"
 NFA_legionary_campaign1:0 "Foreign Legion Expansion"
 NFA_legionary_campaign2:0 "Foreign Legion Expansion"
