--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -2,25 +2,25 @@ l_english:
 
 ### Parties ###
 GRE_totalist_party:0 "EAM"
-GRE_totalist_party_long:0 "Ethnikó Apeleftherotikó Métopo tis Elládas"
+GRE_totalist_party_long:0 "그리스 민족 해방전선"
 GRE_syndicalist_party:0 "KEKE"
-GRE_syndicalist_party_long:0 "Kinonikó Ergatikó Kómma tis Elládas"
+GRE_syndicalist_party_long:0 "그리스 사회노동당"
 GRE_radical_socialist_party:0 "ARM"
-GRE_radical_socialist_party_long:0 "Agrotikó Dimokratikó Métopos"
+GRE_radical_socialist_party_long:0 "농민 민주전선"
 GRE_social_democrat_party:0 "EEK"
-GRE_social_democrat_party_long:0 "Ethnikón Enotikón Kómma"
+GRE_social_democrat_party_long:0 "민족 통일당"
 GRE_social_liberal_party:0 "NFE"
-GRE_social_liberal_party_long:0 "Néa Fileléftheri Énosi"
+GRE_social_liberal_party_long:0 "신 자유연맹"
 GRE_market_liberal_party:0 "FK"
-GRE_market_liberal_party_long:0 "Fileléfthero Kómma"
+GRE_market_liberal_party_long:0 "자유당"
 GRE_social_conservative_party:0 "LK"
-GRE_social_conservative_party_long:0 "Laïkó Kómma"
+GRE_social_conservative_party_long:0 "인민당"
 GRE_authoritarian_democrat_party:0 "NK"
-GRE_authoritarian_democrat_party_long:0 "Néo Krátos"
+GRE_authoritarian_democrat_party_long:0 "신 질서 운동"
 GRE_paternal_autocrat_party:0 "KTE"
-GRE_paternal_autocrat_party_long:0 "Kómma ton Eleftherofrónon"
+GRE_paternal_autocrat_party_long:0 "자유 사상가당"
 GRE_national_populist_party:0 "EEL"
-GRE_national_populist_party_long:0 "Ethniki Ellados Legionnares"
+GRE_national_populist_party_long:0 "민족 그리스 군단"
 
 ### Ideas ###
 GRE_legacy_of_alexander_idea:0 "Legacy of Alexander"
