--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -42,9 +42,9 @@ NFA_legionary_campaign1:0 "Foreign Legion Expansion"
 NFA_legionary_campaign2:0 "Foreign Legion Expansion"
 NFA_vaisseaux_liberation:0 "The Vaisseaux de la Libération"
 NFA_troupes_de_marine_idea:0 "Troupes de Marine"
-NFA_dakar_algiers_airway_idea:0 "The Dakar to Algiers Airways"
-NFA_dakar_algiers_airway_idea2:0 "The Dakar to Algiers Airways"
-NFA_entente_research_idea:0 "협상국 연구 연결"
+NFA_dakar_algiers_airway_idea:0 "다카르-알제 항로"
+NFA_dakar_algiers_airway_idea2:0 "다카르-알제 항로"
+NFA_entente_research_idea:0 "협상국 연구 연계"
 NFA_church_support_idea:0 "교회 지원"
 NFA_latin_high_command_idea:0 "Latin High-Command"
 NFA_aumoniers_idea:0 "Aumôniers"
@@ -56,25 +56,25 @@ NFA_skilled_transsaharian:0 "Skilled workers work on the Transsaharian Railroad"
 NFA_transsaharian_built:0 "The Transsaharian Railroad"
 NFA_tunisian_anger:0 "Tunisian Resentment"
 
-NFA_demo:0 "국민 프랑스 민주주의 국가입니다"
+NFA_demo:0 "국민 프랑스가 민주주의 국가입니다"
 
 ### Focuses ###
 NFA_industrial_revival:0 "산업 확장"
-NFA_industrial_revival_desc:0 "Our industry here in Africa is far behind the one the communards have on the mainland. If we want to defeat them we'll have to strengthen our industry significantly."
+NFA_industrial_revival_desc:0 "이곳 아프리카의 우리 산업은 대륙에 있는 그들보다 압도적으로 뒤쳐져 있습니다. 만약 우리가 그들을 이기고 싶다면 우리는 우리의 산업을 크게 강화해야만 할 것입니다."
 NFA_sahara_census:0 "사하라 인구 조사와 인구 목록 작성 시작"
-NFA_sahara_census_desc:0 "The French Government-in-Exile has had a tough economic situation, leading to several outlandish projects in order to gain more funds. Some bright young mind in a government agency has come up with an idea to make a census and inventory of the Sahara region. We should send out government officials and expeditions to survey the region."
-NFA_sahara_census_tooltip:0 "알제리-중앙 아프리카의 인구 조사와 인구 목록 작성을 시작할 것입니다... \n"
+NFA_sahara_census_desc:0 "프랑스 망명정부는 어려운 경제 상황을 겪어 왔고, 더 많은 수익을 창출하기 위해 몇 가지 참신한 프로젝트들을 이끌었습니다. 정부 기관의 파릇파릇한 청년들이 사하라 사막 지역의 인구 및 경제 조사를 위한 아이디어를 생각해냈습니다. 우리는 그 지역을 조사하기 위해 정부 관계자들 그리고 원정대를 보내야 합니다."
+NFA_sahara_census_tooltip:0 "알제리-중앙 아프리카의 인구 조사를 시작할 것입니다... \n"
 NFA_inventory_progress:0 "알제리-중앙 아프리카 인구 조사가 완료되었습니다."
 NFA_transsaharian:0 "사하라 횡단 철도"
-NFA_transsaharian_desc:0 "A key component of our strategy is to improve the links between North and West Africa, particularly with our base of Dakar. To solve that, the project of a railroad linking Algiers to Dakar directly was already started under the Third Republic but the project was ultimately abandoned, now it's our turn to take on this torch and succeed where our predecessors couldn't!"
+NFA_transsaharian_desc:0 "우리 전략의 핵심 요소는 알제로 대표되는 북아프리카와 다카르로 대표되는 서아프리카 사이의 연결망을 개선하는 것입니다. 이 문제를 해결하기 위해, 알제와 다카르를 직접 연결하는 철도 프로젝트가 이미 제3공화국 시절 추진되었었지만 결국 중단된 바 있습니다. 이제 우리가 착수할 차례입니다. 우리의 전임자들이 할 수 없었던 일을 해냅시다!"
 building_transaharian_tooltip:0 "다카르와 알제를 연결하는 철도를 건설하기 시작할 것입니다\n"
-NFA_develop_ALG:0 "도로부"
-NFA_develop_ALG_desc:0 "Before thinking of enhancing our industrial output, we have to improve (and in some cases, create from scratch) the infrastructure of the Algerian departments. Unfortunately, they're not nearly as developed as we hoped they would be."
+NFA_develop_ALG:0 "교통망"
+NFA_develop_ALG_desc:0 "우리는 산업 생산량을 늘릴 생각을 하기 전에 알제리 지역의 인프라를 개선(경우에 따라 처음부터 건설)해야 합니다. 안타깝게도 이러한 기술은 우리가 기대하는 것만큼 개발되어 있지 않습니다."
 NFA_industrial_expansion_ALG:0 "통제 경제 정책"
-NFA_industrial_expansion_ALG_desc:0 "Before our defeat against the red scum, Algeria was the most developed colony in our whole empire – but it was still a colony, one with low industrial capacity. The glaring lack of financial input has not made the situation better. We should sponsor state-run companies to alleviate this problem."
+NFA_industrial_expansion_ALG_desc:0 "붉은 쓰레기들에게 우리가 패배하기 전에는 알제리가 우리 제국 전체에서 가장 발전된 식민지였습니다만, 당시에도 알제리의 산업력은 낮았습니다. 눈에 띄게 자금이 부족한 것도 일조했습니다. 우리는 이 문제를 완화하기 위해 국영 기업들을 후원해야 합니다."
 NFA_military_factories_ALG:0 "알제리 군수 산업"
 NFA_military_factories_ALG_desc:0 "To reconquer our homeland we need to produce more weapons than the traitors against us. Funding new factories should help us reduce the difference between us and them."
-NFA_more_military_factories_ALG:0 "금속산업 확장"
+NFA_more_military_factories_ALG:0 "금속 산업 확장"
 NFA_more_military_factories_ALG_desc:0 "The newly created mines and factories will allow us to build a grand metal industry designed to supply our army."
 NFA_dakar_algiers_airway:0 "다카르-알제 항로"
 NFA_dakar_algiers_airway_desc:0 "The Dakar to Algiers Airways was the brain child of Louis Breguet and was designed to kick start the economy in the south of the nation. The competition with German and South African businesses had been a problem for the struggling French businesses and Breguet wanted to help. He was hoping that a new airline could bring more business to North Africa."
@@ -125,7 +125,7 @@ NFA_heavy_cruiser_focus_desc:0 "Heavy cruisers are key ships in any potent fleet
 NFA_battleship_focus:0 "전함 집중"
 NFA_battleship_focus_desc:0 "To defeat our enemies we will have to destroy them in decisive fights. What better weapons than battleships to win this fight?"
 
-NFA_DeGaulle_focus:0 "드골 계획"
+NFA_DeGaulle_focus:0 "드 골 계획"
 NFA_DeGaulle_focus_desc:0 "The Military High-Command will follow the recommendations of Général de Gaulle, focusing on building our military forces to retake our homeland."
 NFA_southern_conscription:0 "남부 징집"
 NFA_southern_conscription_desc:0 "Nationalist France had been struggling with manpower. The reputation of the French military had been tarnished by its failure in the Weltkrieg and volunteering was at an all time low. Fiercely national Frenchman could not be the only source of manpower and other sources of manpower were needed. The government is looking to the people in the south of the country."
@@ -161,7 +161,7 @@ NFA_carrier_effort:0 "항공모함 개발"
 NFA_carrier_effort_desc:0 "Carriers are expensive and massive naval projects to undertake... But should we manage to construct a few and protect them with screens, our navy will go from an outdated relic of the past to one of the most feared ones the world knows."
 
 NFA_restore_constitution:0 "유예된 헌법 복원"
-NFA_restore_constitution_desc:0 "제3공화국은 그 전신과 마찬가지로, 독일에게 패배해 종식되었습니다. 코뮌 봉기와 아프리카로의 도피 이후, 조프르와 후에는 페탱에 의해 헌법은 효력이 일시중지 되었습니다. 아마도 이제는 군정을 끝내고 프랑스 민주주의의 진정한 이상으로 개혁할 때일지도 모릅니다."
+NFA_restore_constitution_desc:0 "제3공화국은 그 전신과 마찬가지로, 독일에게 패배해 종식되었습니다. 코뮌 봉기와 아프리카로의 도피 이후, 조프르와 후에는 페탱에 의해 헌법은 효력이 일시적으로 중지되었습니다. 아마도 이제는 군정을 끝내고 프랑스 민주주의의 진정한 이상으로 개혁할 때일지도 모릅니다."
 NFA_restore_constitution_tooltip:0 "§R민주주의 제4공화국을 복원할 것입니다.§! \n"
 NFA_monarchy:0 "프랑스 왕국 복원"
 NFA_monarchy_desc:0 "프랑스가 분열된 정부 밑에서 엄청난 고통을 받아왔다는 것은 잘 알려진 사실입니다. 강력한 인물이 영구적인 국가 수반으로 역할을 맡고 우리 국가에 안정을 줄 수 있습니다, 특히 우리가 국왕 다음가는 강력한 의회를 유지한다면 말입니다. 태양왕의 영광스러운 날들을 꿈꾸며 프랑스 군주정을 완전히 부활시키는 것이 구미가 당길지도 모릅니다."
@@ -212,7 +212,7 @@ NFA_tank_research:0 "전차 연구"
 NFA_tank_research_desc:0 "Tanks will prove themselves to be the most important vehicle of any war, or so De Gaulle claims. It's time we invest in them."
 NFA_troupes_de_marine:0 "해병대"
 NFA_troupes_de_marine_desc:0 "Key figures in the French military have recently proposed an idea on how to reclaim mainland France. The Troupes de Marine, until now part of the Troupes Coloniales, would become an entirely separate branch of the French military. The marines would receive funding, and be able to better train new marine forces for any future invasion of France itself."
-NFA_mountain_elites:0 "샤쇠르 알팽의 유산"
+NFA_mountain_elites:0 "샤쇠르알팡의 유산"
 NFA_mountain_elites_desc:0 "The Chasseurs Alpins have for long been the pride and the elite of the French forces, trained in both mountain and urban warfare. Their legacy is not forgotten!"
 
 NFA_reenforce_the_Entente:0 "협상국 강화"
@@ -225,7 +225,7 @@ NFA_entente_research:0 "국제적 기술 공유"
 NFA_entente_research_desc:0 "From Canada, to Delhi to Australasia, great scientists pursue the same researches and it gives us more possibilities to develop our armies and overall technologies."
 NFA_support_kos:0 "스페인 왕국 지원"
 NFA_support_kos_desc:0 "The Kingdom of Spain is thrown into Civil War. It is our duty to send them volunteers and help them win against the reactionary Carlists and the reds from the CNT!"
-NFA_influence_kos:0 "스페인왕국에 영향력 행사"
+NFA_influence_kos:0 "스페인 왕국에 영향력 행사"
 NFA_influence_kos_desc:0 "Madrid has won the Civil War, in many parts thanks to us. It is the occasion to draw them closer to the Entente and maybe use them as a leverage to regain France!"
 NFA_support_carlists:0 "카를시스트 지원"
 NFA_support_carlists_desc:0 "Spain is thrown into Civil War. Instead of supporting the decadent Kingdom of Spain we could support the true pretenders to the throne, our Catholic brothers, the Carlists."
@@ -237,7 +237,7 @@ NFA_Church_support_desc:0 "With the Pope blessing our actions we have seen less 
 NFA_military_cooperation:0 "라틴 최고 사령부"
 NFA_military_cooperation_desc:0 "Our Military High-Command feels closer to our Spanish and Italian allies than with the foreigners from the British Empire. It has greatly benefited our military with joint-exercises."
 NFA_aumoniers:0 "사제"
-NFA_aumoniers_desc:0 "우리 병력들은 사제들의 지원을 받고 우리의 대의를 위해 죽을 때까지 싸울 것이다!"
+NFA_aumoniers_desc:0 "우리 병력들은 사제들의 지원을 받고 우리의 대의를 위해 죽을 때까지 싸울 것입니다!"
 
 NFA_seize_morocco:0 "독일령 모로코 점령"
 NFA_seize_morocco_desc:0 "The German Reich is crumbling in Europe, as their great capital Berlin has fallen to the enemy forces. With their Empire in disarray, some of our generals think that we should use the opportunity and seize their colony of Morocco, which has been a French protectorate up until the Weltkrieg."
