--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -1247,16 +1247,16 @@ amcivwar.605.a:0 "원래 그랬어야 했다."
 amcivwar.605.b:0 "적어도 좋은 소식이긴 하군."
 amcivwar.605.c:0 "마땅히 무너질 만 했다"
 amcivwar.605.e:0 "흥미롭군"
-amcivwar.607.t:0 "We are Cut Off"
-amcivwar.607.d:0 "Our corridor to the western United States has been cut off, and forces are advancing on Washington. We could attempt to hold out here, but chances are our forces out west would evaporate and we run the risk of our leaders being taken here in the city. Advisors have suggested evacuating to Denver, while we still can."
-amcivwar.607.a:0 "Move the capital to Denver at once"
-amcivwar.607.b:0 "No - we hold out here, come what may"
-amcivwar.610.t:0 "Remaining American Territory"
-amcivwar.610.d:0 "Now that we've concluded our territory exchange with [CAL.GetNameDef], there are still territories in the east we could potentially turn over to our allies in [NEE.GetNameDef]."
-amcivwar.610.a:0 "Yes, let's do that"
-amcivwar.610.b:0 "No, they don't need more free land"
-amcivwar.611.t:0 "The Canadian Intervention"
-amcivwar.611.d:0 "It appears [CAN.GetNameDef] has decided to put its finger on the scales of the civil war, likely meaning they intend to impose their own values on the American people if not rule over America directly. Many within our government are outraged, but what can be done about it?"
-amcivwar.611.a:0 "We must resist them, no matter what"
-amcivwar.611.b:0 "We are in no condition to fight them"
+amcivwar.607.t:0 "차단"
+amcivwar.607.d:0 "미국 서부로 향하는 통로가 차단되었으며, 군대는 워싱턴으로 진격하고 있습니다. 여기서 버티려고 할 수도 있지만, 서쪽에 있는 우리의 병력이 증발하고 지도자들이 워싱턴에서 잡힐 가능성이 있습니다. 전문가들은 대피할 수 없게 되기 전에 덴버로 대피하자고 제안했습니다."
+amcivwar.607.a:0 "일단 수도를 덴버로 옮겨라"
+amcivwar.607.b:0 "아니 - 무슨 일이 있어도 여기서 버텨낸다."
+amcivwar.610.t:0 "남은 미국 영토"
+amcivwar.610.d:0 "[CAL.GetNameDef]과의 영토 교환을 마무리지었지만, 아직 동쪽에는 [NEE.GetNameDef]의 동맹국에 넘겨줄 수 있는 영토가 남아 있습니다."
+amcivwar.610.a:0 "그래, 그렇게 하자"
+amcivwar.610.b:0 "아니,  그들은 더 이상의 공짜 땅이 필요 없다."
+amcivwar.611.t:0 "캐나다의 개입"
+amcivwar.611.d:0 "[CAN.GetNameDef]가 내전의 규모를 정확히 가늠해보기로 결정한 것으로 보이며, 이는 미국을 직접 지배하지 않을 지라도 그들의 가치관을 미국 국민들에게 강요하려는 것을 의미합니다. 우리 정부 내의 많은 사람들이 격분했습니다. 하지만 우리가 무엇을 할 수 있을까요?"
+amcivwar.611.a:0 "무슨 일이 있어도 저항해야 한다."
+amcivwar.611.b:0 "우리는 그들과 싸울 상태가 아니다."
 
